<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">GamesNote</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="List">My List</string>
    <string name="Wiki">Games Wiki</string>
    <string name="games_news">News &amp; Reviews</string>
    <string name="game_videos">Videos</string>
    <string name="help_and_support"><![CDATA[Help & Support]]></string>
    <string name="giantbomb_site">Visit giantbomb</string>
    <string name="email_me">ContactUs</string>
    <string name="Settings">Settings</string>
    <string name="username">MyUserName</string>
    <string name="home">Home</string>
    <string name="GameListFragment">My List</string>
    <string name="games_calender">Game Calender</string>
    <string name="desc">Description</string>
    <string name="search">Search Games…</string>
    <string name="no_description">No available description</string>
    <string name="smallImageUrl">smallUrl</string>
    <string name="mediumImageUrl">mediumUrl</string>
    <string name="info">options</string>
    <string name="transition_viewpager">transactionViewpager</string>
    <string name="foo">foo</string>
    <string name="bar">bar</string>
    <string-array name="status">
        <item>Replaying</item>
        <item>Planning</item>
        <item>Dropped</item>
        <item>Playing</item>
        <item>Completed</item>
    </string-array>
    <string name="giantbomb">GiantBomb</string>
    <string name="gamespot">Gamespot</string>
    <string name="eurogamer">Eurogamer</string>
    <string name="kotaku">Kotaku</string>
    <string name="gameinformer">GameInformer</string>
    <string name="videogamer">VideoGamer</string>
    <string name="pcworld">PcWorld</string>
    <string name="venturebeat">VentureBeat</string>
    <string name="tomshardware">Tom\'s Hadrware</string>
    <string name="ign">IGN</string>
    <string name="g4tv">G4tv</string>
    <string name="playstaion">Playstation4</string>
    <string name="purexbox">pureXbox</string>
    <string name="metaleater">Metaleater</string>
    <string name="giantbombRelease">GiantBomb Game Release</string>
    <string name="no_result_found">No result found</string>
    <string name="list_fragment_title">Pick a game</string>
    <string name="characterwiki">Character Wiki</string>
    <string name="GameVideoFragment">Game Videos</string>
    <string name="title">Title</string>
    <string name="time">time</string>
    <string name="reviews">Reviews</string>
    <string name="quick_looks">Quick Looks</string>
    <string name="events">Events</string>
    <string name="features">Features</string>
    <string name="all_video">All Videos</string>
    <string name="tang">TANG</string>
    <string name="endurance_run">Endurance Run</string>
    <string name="premium">Premium</string>
    <string name="extra_life">Extra Life</string>
    <string name="encyclopedia">Encyclopedia Bombastica</string>
    <string name="unfinished">Unfinished</string>
    <string name="metal_gear">Metal Gear Scanlon</string>
    <string name="vinny">VinnyVania</string>
    <string name="breaking_bad">Breaking Brad</string>
    <string name="best">Best of Giant Bomb</string>
    <string name="game_tapes">Game Tapes</string>
    <string name="kerbal">Kerbal: Project B.E.A.S.T</string>
    <string name="main">Main</string>
    <string name="giantbomb_special">Giantbomb Speical</string>
    <string name="compact_view">Compact view</string>
    <string name="reduce_view">Card view</string>
    <string name="view">VIEW</string>
    <string-array name="search_filter">

        <item>Original release date</item>
        <item>Date added</item>
        <item>Date updated</item>
        <item>No of user review</item>
        <item>Default</item>
    </string-array>
    <string-array name="video_quality">
        <item>Low</item>
        <item>High</item>
        <item>Youtube</item>
        <item>View in Giantbomb</item>

    </string-array>
    <string-array name="sort_filter">
        <item>Name</item>
        <item>Date added</item>
        <item>Date modified</item>
        <item>Score</item>
        <item>Start date</item>
        <item>End date</item>
        <item>Gameplay hours</item>
        <item>Price</item>
    </string-array>
    <string-array name="profile_images">
        <item>http://vignette2.wikia.nocookie.net/bleachfanfiction/images/5/5a/Sexy-character-game-girl.jpg/revision/latest?cb=20121222192302</item>
        <item>http://vignette2.wikia.nocookie.net/yoville/images/a/a0/YoWorld_game_character.png/revision/latest?cb=20140930160906</item>
        <item>http://wallpaperpixel.com/thumbnail/71/65/max-payne-3-game-character-thumbnail.jpg</item>
        <item>http://vignette4.wikia.nocookie.net/fighting-games/images/f/fa/Street-Fighter-Alpha-3-Game-Character-Official-Artwork-Render-Ryu-3.jpg/revision/latest?cb=20140115135340</item>
        <item>http://wallpaperpixel.com/thumbnail/05/76/video-game-prototype-2-character-thumbnail.jpg</item>
        <item>https://uploads.disquscdn.com/images/69d5f290a1aebcf6a4d400300dee4bc722b5d273d95e28ea1099718f90fad094.jpg</item>
        <item>http://wallpaperpixel.com/thumbnail/12/78/resident-evil-5-woman-character-thumbnail.jpg</item>
        <item>http://images.withthewill.net/appmon_3ds_girl_august22_2016.jpg</item>
        <item>http://img2.wikia.nocookie.net/__cb20140528023805/watchdogscombined/images/a/a0/Watch_Dogs_Maurice_Vega.png</item>
        <item>http://1.bp.blogspot.com/-XK7aRvyMFeo/UZzhpOEyLGI/AAAAAAAAUo0/0vt6wQN_3Wc/s1600/Domino_render_red_02_ForUpl-large.png</item>
        <item>http://img2.rnkr-static.com/user_node_img/3680/73586219/870/lucy-heartfilia-u26.jpg</item>
        <item>http://img1.rnkr-static.com/list_img_v2/10536/2070536/C480/anime-characters-with-blue-hair.jpg</item>
        <item>http://s.orzzzz.com/news/5a/f9//5667c88100a13.jpg</item>
        <item>https://i.ytimg.com/vi/GTqawiOnDA0/maxresdefault.jpg</item>
        <item>https://i.stack.imgur.com/jfpt0.jpg</item>
        <item>http://cdn.playbuzz.com/cdn/7c09f435-5177-413c-823f-b618ffc9d523/55202932-ae8c-49e1-a316-bf08eae9c239.jpg</item>
        <item>http://assets1.ignimgs.com/2014/02/04/top25anime0204141280jpg-8eff3c_1280w.jpg</item>
        <item>http://bodminmagazine.com/wp-content/uploads/2015/04/What-Hair-Colors-Of-Anime-Characters-Really-Mean.jpg</item>
        <item>http://i2.wp.com/haruhichan.com/wpblog/wp-content/uploads/10000-Anime-Fans-Voted-for-Female-Supporting-Characters-They-Would-like-to-See-as-the-Protagonist-haruhichan.com-Charlotte-Dunois-Infinite-Stratos.gif?resize=500%2C281</item>
        <item>https://myanimelist.cdn-dena.com/s/common/uploaded_files/1464488804-6b3957eda9d67fe0a2aadab60287fd7e.jpeg</item>
        <item>https://justicesoultuna.files.wordpress.com/2013/11/lp0nbsd.jpg</item>
        <item>http://s15.postimg.org/j1whe1xgr/Azusa.jpg</item>
        <item>http://img1.rnkr-static.com/list_img_v2/10544/2070544/C480/anime-characters-with-black-eyes.jpg</item>
        <item>https://myanimelist.cdn-dena.com/s/common/uploaded_files/1464488821-3a9ca76a644084d49e92479db48b3400.jpeg</item>
        <item>http://images.askmen.com/entertainment/galleries/most-badass-videogame-characters-138369045626.jpg</item>
        <item>https://i.ytimg.com/vi/VJDDq-zkGwo/maxresdefault.jpg</item>
        <item>http://2.media.collegehumor.cvcdn.com/96/40/47a19991c45d8c36a9913f7f17e09f47-jill-valentine.jpg</item>
        <item>http://img2.rnkr-static.com/list_img_v2/4388/344388/870/the-most-badass-video-game-heroes-of-all-time-u2.jpg</item>
        <item>http://img-cdn.herbeauty.co/wp-content/uploads/2016/02/most_badass_female_video_game_characters_ever_03.jpg</item>
        <item>http://cdn3-www.craveonline.com/assets/uploads/2011/08/file_173411_0_FemShep_Wallpaper_banner.jpg</item>
        <item>http://0.media.collegehumor.cvcdn.com/46/21/dec5fc6f5cc72f5a95fb9fb59a6d16a0-ellie.jpg</item>

    </string-array>
    <string name="score">Your Score</string>
    <string-array name="medium">
        <item>-</item>
        <item>Physical</item>
        <item>Digital</item>
    </string-array>
    <string-array name="price">
        <item>-</item>
        <item>1–5</item>
        <item>5–10</item>
        <item>10–20</item>
        <item>20–30</item>
        <item>30–40</item>
        <item>40–50</item>
        <item>50–60</item>
        <item>60–80</item>
        <item>80–120</item>
        <item>>120</item>
    </string-array>
    <string-array name="entries_list_preference">
        <item>Low</item>
        <item>High</item>
    </string-array>
    <string-array name="entryvalues_list_preference">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="video_entries_list_preference">
        <item>Low</item>
        <item>High</item>
        <item>Play in browser</item>
        <item>Youtube</item>
    </string-array>
    <string-array name="video_entries_values_list_preference">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="stat_list_preference">
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
        <item>50</item>
        <item>75</item>
        <item>100</item>
    </string-array>
    <string name="enable_background_audio">Play in background</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="text">Text</string>
    <string name="logging">Logging</string>
    <string name="logging_normal">Normal</string>
    <string name="logging_verbose">Verbose</string>
    <string name="retry">Retry</string>
    <string name="off">[off]</string>
    <string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>
    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>
    <string name="error_drm_unknown">An unknown DRM error occurred</string>
    <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_querying_decoders">Unable to query device decoders</string>
    <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>
    <string name="storage_permission_denied">Permission to access storage was denied</string>
    <string name="share">share</string>
    <string name="font">Font</string>
    <string name="list_view">list view</string>
    <string name="grid_view">Grid view</string>
    <string name="pcgamer">PC Gamer</string>
    <string name="dsogaming">DSOGaming</string>
    <string name="view_in_browser">View in browser</string>
    <string name="loading_video">loading video</string>
    <string name="quick_add">Quick Add</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="platform">Platform</string>
    <string name="add_to_list">Add to list</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="reduce_list_view">reduce_list_view</string>
    <string name="giantbomb_release">Giantbomb releases</string>
    <string name="news">News</string>
    <string name="add_new_source">Add new source</string>
    <string name="custom_source">My source</string>
    <string name="media_title">cast video</string>
</resources>