<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/main">
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_all_videos"
                    android:title="@string/all_video" />

                <item
                    android:id="@+id/nav_reviews"
                    
                    android:title="@string/reviews" />

                <item
                    android:id="@+id/nav_quick_looks"
                    
                    android:title="@string/quick_looks" />

                <item
                    android:id="@+id/nav_events"
                    
                    android:title="@string/events" />

                <item
                    android:id="@+id/nav_trailer"
                    
                    android:title="@string/game_videos" />

                <item
                    android:id="@+id/nav_features"
                    
                    android:title="@string/features" />


            </group>

        </menu>

    </item>

    <item android:title="@string/giantbomb_special">

        <menu>

            <group android:checkableBehavior="single">


                <item
                    android:id="@+id/nav_tang"
                    
                    android:title="@string/tang" />

                <item
                    android:id="@+id/nav_endurance_run"
                    
                    android:title="@string/endurance_run"

                    />

                <item
                    android:id="@+id/nav_premium"
                    
                    android:title="@string/premium" />

                <item
                    android:id="@+id/nav_extra_life"
                    
                    android:title="@string/extra_life" />

                <item
                    android:id="@+id/nav_encyclopedia"
                    
                    android:title="@string/encyclopedia" />

                <item
                    android:id="@+id/nav_unfinished"
                    
                    android:title="@string/unfinished" />

                <item
                    android:id="@+id/nav_metal_gear"
                    
                    android:title="@string/metal_gear" />

                <item
                    android:id="@+id/nav_vinny"
                    
                    android:title="@string/vinny" />

                <item
                    android:id="@+id/nav_breaking_bad"
                    
                    android:title="@string/breaking_bad" />


                <item
                    android:id="@+id/nav_best"
                    
                    android:title="@string/best" />


                <item
                    android:id="@+id/nav_game_tapes"
                    
                    android:title="@string/game_tapes" />

                <item
                    android:id="@+id/nav_kerbal"
                    
                    android:title="@string/kerbal" />


            </group>

        </menu>

    </item>

</menu>