<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_new_source"
        android:title="@string/custom_source"
        app:showAsAction="always"
        >


        <menu>
            <group android:checkableBehavior="single">

            </group>
        </menu>

    </item>

    <item
        android:id="@+id/nav_add_source"
        android:icon="@drawable/ic_action_add"
        android:title="@string/add_new_source" />


    <item android:title="@string/news">
        <menu>
            <group android:checkableBehavior="single"

                >

                <item
                    android:id="@+id/nav_dsogaming"
                    android:icon="@drawable/dsogaming_icon"
                    android:title="@string/dsogaming">

                </item>

                <item
                    android:id="@+id/nav_eurogamer"
                    android:icon="@drawable/eurogamer_icon"
                    android:title="@string/eurogamer">

                </item>


                <item
                    android:id="@+id/nav_gameinformer"
                    android:icon="@drawable/gameinformer_icon"
                    android:title="@string/gameinformer">

                </item>

                <item
                    android:id="@+id/nav_gamespot"
                    android:icon="@drawable/gamespot_icon"
                    android:title="@string/gamespot">


                </item>

                <item
                    android:id="@+id/nav_giantbomb"
                    android:icon="@drawable/giantbomb_icon"
                    android:title="@string/giantbomb"
                    >

                </item>

                <item
                    android:id="@+id/nav_giantbomb_release"
                    android:icon="@drawable/giantbomb_icon"
                    android:title="@string/giantbomb_release"
                    >

                </item>



                <item
                    android:id="@+id/ign"
                    android:icon="@drawable/ign_icon"
                    android:title="@string/ign">

                </item>


                <item
                    android:id="@+id/nav_kotaku"
                    android:icon="@drawable/kotaku_icon"
                    android:title="@string/kotaku" />

                <item
                    android:id="@+id/nac_pc_gamer"
                    android:icon="@drawable/pcgamer_icon"
                    android:title="@string/pcgamer">

                </item>


                <item
                    android:id="@+id/nav_pcworld"
                    android:icon="@drawable/pcworld_icon"
                    android:title="@string/pcworld">

                </item>

                <item
                    android:id="@+id/nav_playstation4"
                    android:icon="@drawable/playstaion4_icon"
                    android:title="@string/playstaion" />


                <item
                    android:id="@+id/toms_harware"
                    android:icon="@drawable/toms_hardware_icon"
                    android:title="@string/tomshardware">

                </item>

                <item
                    android:id="@+id/nav_venturebeat"
                    android:icon="@drawable/venturebeat_icon"
                    android:title="@string/venturebeat">

                </item>

                <item
                    android:id="@+id/nav_videogamer"
                    android:icon="@drawable/videogamer_icon"
                    android:title="@string/videogamer">

                </item>


            </group>

        </menu>


    </item>

    <item android:title="@string/reviews">

        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_news_gameinformer"
                    android:icon="@drawable/gameinformer_icon"
                    android:title="@string/gameinformer" />

                <item
                    android:id="@+id/nav_news_gamespot"
                    android:icon="@drawable/gamespot_icon"
                    android:title="@string/gamespot" />

                <item
                    android:id="@+id/nav_news_giantbomb"
                    android:icon="@drawable/giantbomb_icon"
                    android:title="@string/giantbomb" />

                <item
                    android:id="@+id/nav_news_ign"
                    android:icon="@drawable/ign_icon"
                    android:title="@string/ign" />


                <item
                    android:id="@+id/nav_news_metaleater"
                    android:icon="@drawable/metal_eater_icon"
                    android:title="@string/metaleater" />

                <item
                    android:id="@+id/nav_news_pcworld"
                    android:icon="@drawable/pcworld_icon"
                    android:title="@string/pcworld" />


            </group>


        </menu>


    </item>





    </menu>