<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        yourapp:showAsAction="always|collapseActionView"
        yourapp:actionViewClass="android.support.v7.widget.SearchView"
        />

    <item
        android:id="@+id/media_route_menu_item"
        android:title="@string/media_title"
        yourapp:actionProviderClass="android.support.v7.app.MediaRouteActionProvider"
        yourapp:showAsAction="always"/>

    <item
        android:id="@+id/filter"
        android:title="Filter Result"
        android:icon="@drawable/ic_sort_white"
        yourapp:showAsAction="ifRoom|collapseActionView"/>

    <item
        android:id="@+id/view"
        android:title="@string/reduce_list_view"
        yourapp:showAsAction="ifRoom|collapseActionView"/>

</menu>