<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/stats_cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="6dp"
    android:layout_marginTop="6dp"
    android:animateLayoutChanges="true"
    android:visibility="gone"
    app:cardBackgroundColor="@color/cardColor"
    app:cardCornerRadius="4dp"
    app:elevation="4dp"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       >

        <TextView
            android:id="@+id/stats_heading"
            style="@style/cardview_textstyle"
            android:drawableLeft="@drawable/ic_pie_chart"
            android:drawableStart="@drawable/ic_pie_chart"
            android:text="Stats"
            />

        <ImageView
            android:id="@+id/stats_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="6dp"
            android:layout_marginRight="6dp"
            android:scaleType="matrix"
            android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
            />


    </RelativeLayout>


        <LinearLayout
            android:id="@+id/hide_parent_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="6dp"
            android:visibility="gone"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:orientation="horizontal"
                >

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textColor="@color/primary_text_light" />

            <TextView
                android:id="@+id/status_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="end"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:text="-"
                android:textColor="@color/primary_text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/score"
                    android:textColor="?android:attr/textColorSecondary" />

                <TextView
                    android:id="@+id/score_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:gravity="end"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"
                    android:text="-"
                    android:textColor="@color/primary_text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/platform"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/platform"
                    android:textColor="?android:attr/textColorSecondary" />

                <TextView
                    android:id="@+id/platfom_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"
                    android:text="-"
                    android:textColor="@color/primary_text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hours"
                    android:textColor="?android:attr/textColorSecondary" />

                <TextView
                    android:id="@+id/hours_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"
                    android:text="-"
                    android:textColor="@color/primary_text" />

            </LinearLayout>




        </LinearLayout>


    </LinearLayout>


</android.support.v7.widget.CardView>
